--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@types/react-router-dom": "^5.3.3",
     "axios": "^1.6.8",
     "body-parser": "^1.20.2",
     "class-variance-authority": "^0.7.0",
@@ -35,7 +36,8 @@
     "crisp-sdk-web": "^1.0.22",
     "dotenv": "^10.0.0",
     "ejs": "^3.1.9",
-    "express": "^4.17.1",
+    "express": "^4.19.2",
+    "localtunnel": "^2.0.2",
     "lucide-react": "^0.358.0",
     "next": "14.1.3",
     "next-themes": "^0.3.0",
@@ -48,6 +50,7 @@
     "react-hook-form": "^7.51.0",
     "react-hot-toast": "^2.4.1",
     "react-markdown": "^9.0.1",
+    "react-router-dom": "^6.22.3",
     "replicate": "^0.28.1",
     "stripe": "^14.21.0",
     "tailwind-merge": "^2.2.1",
