--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-markdown": "^9.0.1",
     "react-router-dom": "^6.22.3",
     "replicate": "^0.28.1",
+    "server-only": "^0.0.1",
     "stripe": "^14.21.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
